navigation__savedNews fixed horizontal scrolling around 768px

--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -39,6 +39,7 @@
 @media screen and (max-width: 768px) {
   .navigation__homeSavedNews {
     height: 66px;
+    font-size: 16px;
   }
 }
 
@@ -91,6 +92,9 @@
 @media screen and (max-width: 768px) {
   .navigation__savedArticlesSavedNews {
     height: 66px;
+    font-size: 16px;
+    width: 140px;
+    margin: 0px 10px 0px 10px;
   }
 }
 
@@ -132,6 +136,7 @@
   .navigation__profileButtonSavedNews {
     width: 100px;
     height: 40px;
+    margin-left: 0px;
   }
 }
 
